test/expected/passthrough/3.alias.binding/exposing/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: "2020-03-03T02:27:57Z"
  generation: 1
  labels:
    mesh: passthrough
  name: exposition-passthrough-helloworld-intermesh
  namespace: default
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceExposition
    name: helloworld
    uid: 9818c173-5cf6-11ea-b41a-ca67b6d79c4d
  resourceVersion: "70136669"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/default/destinationrules/exposition-passthrough-helloworld-intermesh
  uid: 982f4537-5cf6-11ea-8107-aa3f405a4c17
spec:
  host: holamundo.default.svc.cluster.local
  subsets:
  - name: notls
    trafficPolicy:
      tls: {}
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
