test/expected/passthrough/3.alias.binding/exposing/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: "2020-03-03T02:27:57Z"
  generation: 1
  labels:
    mesh: passthrough
    role: external
  name: intermesh-holamundo-default
  namespace: default
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceExposition
    name: helloworld
    uid: 9818c173-5cf6-11ea-b41a-ca67b6d79c4d
  resourceVersion: "70136673"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/default/virtualservices/intermesh-holamundo-default
  uid: 98473c80-5cf6-11ea-8107-aa3f405a4c17
spec:
  gateways:
  - exposition-passthrough-helloworld-intermesh
  hosts:
  - '*'
  tls:
  - match:
    - port: 15443
      sniHosts:
      - helloworld.default.svc.cluster.local
    route:
    - destination:
        host: holamundo.default.svc.cluster.local
        port:
          number: 5000
        subset: notls
